# prscout

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  scoring_improvement.md
.github/workflows/: ci.yml  publish.yml
docs/examples/: prscout-report.txt  prscout-snapshot.json  sample-report.txt  sample-snapshot.json
src/prscout/: __init__.py  analysis.py  cli.py  github.py  models.py  render.py
tests/: test_analysis.py  test_cli.py  test_github.py
