[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "prscout"
version = "0.1.0"
description = "Find realistic, beginner-friendly pull request entry points in GitHub repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "MickeyWzt" }
]
keywords = ["github", "open-source", "pull-requests", "cli", "good-first-issue"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MickeyWzt/prscout"
Issues = "https://github.com/MickeyWzt/prscout/issues"

[project.scripts]
prscout = "prscout.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

